<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="views.activities.RegistrationActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/registration_start_end_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
        >


            <com.google.android.material.textfield.TextInputLayout
                    style="@style/AppTextInputLayoutStyle"
                    android:id="@+id/profileNameLayout"
                    android:layout_width="0dp"
                    app:boxBackgroundMode="filled"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_margin="@dimen/registration_start_end_margin"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        style="@style/AppTextInputEditTextStyle"
                        android:id="@+id/profileNameView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:paddingLeft="6dp"
                        android:paddingStart="6dp"
                        android:paddingRight="6dp"
                        android:paddingEnd="6dp"
                />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/AppTextInputLayoutStyle"
                    android:id="@+id/profileMobileLayout"
                    android:layout_width="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/profileNameLayout"
                    app:boxBackgroundMode="filled"
                    android:layout_margin="@dimen/registration_start_end_margin"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        style="@style/AppTextInputEditTextStyle"
                        android:id="@+id/profileMobileView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile"
                        android:inputType="text"
                        android:paddingLeft="6dp"
                        android:paddingStart="6dp"
                        android:paddingRight="6dp"
                        android:paddingEnd="6dp"
                />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                    style="@style/AppTextInputLayoutStyle"
                    android:id="@+id/profileEmailLayout"
                    android:layout_width="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/profileMobileLayout"
                    app:boxBackgroundMode="filled"
                    android:layout_margin="@dimen/registration_start_end_margin"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        style="@style/AppTextInputEditTextStyle"
                        android:id="@+id/profileEmailView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="text"
                        android:paddingLeft="6dp"
                        android:paddingStart="6dp"
                        android:paddingRight="6dp"
                        android:paddingEnd="6dp"
                />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/AppTextInputLayoutStyle"
                    android:id="@+id/profilePasswordLayout"
                    android:layout_width="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/profileEmailLayout"
                    app:boxBackgroundMode="filled"
                    android:layout_margin="@dimen/registration_start_end_margin"
                    android:visibility="invisible"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        style="@style/AppTextInputEditTextStyle"
                        android:id="@+id/profilePasswordView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/_password"
                        android:inputType="text"
                        android:paddingLeft="6dp"
                        android:paddingStart="6dp"
                        android:paddingRight="6dp"
                        android:paddingEnd="6dp"
                />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/updateButton"
                    style="@style/AppButtonStyle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.08"
                    app:backgroundTint="@color/colorAccent"
                    android:text="@string/update"
                    android:layout_marginBottom="4dp"
                    app:layout_constraintTop_toBottomOf="@id/profilePasswordLayout"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="@dimen/registration_start_end_margin"
                    android:layout_width="0dp"
                    app:layout_constraintWidth_percent="0.4"
                    android:layout_height="wrap_content"/>


            <ProgressBar
                    android:id="@+id/progressProfile"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>